[project]
name = "mcp-server-stardog"
version = "0.0.1"
description = "An MCP server for Stardog"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]

[[project.authors]]
name = "noahgorstein"
email = "noah.gorstein@stardog.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-stardog = "mcp_server_stardog:main"
